--- a/Index.html
+++ b/Index.html
@@ -1,38 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario Folgas</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/pagina.css">
+    <link rel="stylesheet" href="/css/calendario.css">
+    <link rel="stylesheet" href="/css/relatorio-trabalho.css">
+    <title>Escala de folgas</title>
 </head>
 <body>
-    <div class="container">
-        <div class="calendario">
-            <div class="Meses">
-                <i class="left-prev"><</i>
-                <div class="date">
-                    <h1></h1>
-                    <p></p>
+    <header>
+        <h1>Escala de Folgas</h1>
+    </header>
+    <nav>
+        
+    </nav>
+    <main>
+        <section>
+            <div class="container">
+                <div class="calendario">
+                    <div class="meses">
+                        <i class="left-prev"><</i>
+                        <div class="date">
+                            <h1></h1>
+                            <p></p>
+                        </div>
+                        <i class="right-prev">></i>
+                    </div>
+                    <div class="semanas">
+                        <div>Dom</div>
+                        <div>Seg</div>
+                        <div>Ter</div>
+                        <div>Qua</div>
+                        <div>Qui</div>
+                        <div>Sex</div>
+                        <div>Sab</div>
+                    </div>
+                    <div class="dias">
+                    </div>
                 </div>
-                <i class="right-prev">></i>
             </div>
-            <div class="Semanas">
-                <div>Dom</div>
-                <div>Seg</div>
-                <div>Ter</div>
-                <div>Qua</div>
-                <div>Qui</div>
-                <div>Sex</div>
-                <div>Sab</div>
-            </div>
-            <div class="dias">
+        </section>
+        <article>
+        </article>
+    </main>
+    <aside>
+        <div class="container-folgas">
+            <div class="escala">
+                <div class="dias-trabalho-hoje"><h3>27 de Junho de 2023</h3>
+                    <div class="conteudo"><p>Folga</p></div>
+                </div>
+                <div class="dias-trabalho"><h3>28 de Junho de 2023</h3>
+                    <div class="conteudo"><p>11:00 às 20:00</p></div>
+                </div>
+                <div class="dias-trabalho"><h3>29 de Junho de 2023</h3>
+                    <div class="conteudo"><p>11:00 às 20:00</p></div>
+                </div>
+                <div class="dias-trabalho"><h3>30 de Junho de 2023</h3>
+                    <div class="conteudo"><p>11:00 às 20:00</p></div>
+                </div>
+                <div class="dias-trabalho"><h3>1 de Julho de 2023</h3>
+                    <div class="conteudo"><p>11:00 às 20:00</p></div>
+                </div>
+                <div class="dias-trabalho"><h3>2 de Julho de 2023</h3>
+                    <div class="conteudo"><p>Folga</p></div>
+                </div>
             </div>
         </div>
-    </div>
+    </aside>
+    <footer>
+        
+    </footer>
 </body>
-<script src="/js/script.js"></script>
+<script src="/js/calendario.js"></script>
 </html>
